Add sanitizer support
Add ASan [address], MSan [memory], TSan [thread] and UBSan [undefined
behavior] to the cmake-builder scripts. These are intended for developer
usage only. The Github CI/CD build process does not execute or enforce
sanitizer checks.

Linux, macOS: ASan, MSan, TSan and UBSan.
Microsoft: ASan only.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,16 @@ defaults:
 
 jobs:
   cmake-builds:
+    name: CMake Release packages
     uses: ./.github/workflows/cmake-builds.yml
 
+  ## Don't execute sanitizer builds. Yet.
+  ## cmake-sanitizer-builds:
+  ##   name: CMake Debug with sanitizers
+  ###  uses: ./.github/workflows/sanitizer-builds.yml
+
   makefile:
+    name: SIMH Makefile
     runs-on: ${{ matrix.os }}
     strategy:
       #-
