--- a/Ibm1130/CMakeLists.txt
+++ b/Ibm1130/CMakeLists.txt
@@ -40,3 +40,4 @@ if (WIN32)
     target_compile_definitions(ibm1130 PRIVATE GUI_SUPPORT)
     target_sources(ibm1130 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/ibm1130.rc)
 endif()
+include (utils/CMakeLists.txt)
